syntax = "proto3";

import "cy/game/pb/common/head.proto";
import "cy/game/pb/common/common.proto";

package pbhall;

// 查询支持游戏 c -> s 
message QueryGameListReq {
    pbcommon.ReqHead Head = 1;   
}

message QueryGameListRsp {
    pbcommon.RspHead Head = 1;
    repeated string GameNames = 2;
}

// 查询会话信息 c -> s
message QuerySessionInfoReq {
	pbcommon.ReqHead Head = 1;
}

message QuerySessionInfoRsp {
    pbcommon.RspHead Head = 1;
	pbcommon.SessionInfo Info = 2;
}

// 查询用户信息 c -> s
message QueryUserInfoReq {
    pbcommon.ReqHead Head = 1;
}

message QueryUserInfoRsp {
    pbcommon.RspHead Head = 1;
    pbcommon.UserInfo Info = 2;
}

// 查询玩家建的桌子  c -> s
message QueryUserOwnDeskReq {
    pbcommon.ReqHead Head = 1;
}

message QueryUserOwnDeskRsp {
    pbcommon.RspHead Head = 1;
    repeated pbcommon.DeskInfo Infos = 2;
}

// s -> c
message UserWealthChange {
    uint64 UserID = 1;
    uint64 Gold = 2;
    int64 GoldChange = 3;
    uint64 Masonry = 4;
    int64 MasonryChange = 5;
}

// 查询手机绑定情况 c -> s
message QueryMobileIsBindReq {
    pbcommon.ReqHead Head = 1;
    string Mobile = 2;
}

message QueryMobileIsBindRsp {
    pbcommon.RspHead Head = 1;
    // 1 没有绑定 2 已经绑定了
    uint32 Code = 2;
}